force-app/main/default/objects/EventActivity__e/EventActivity__e.object-meta.xml
<CustomObject>
    <label>Event Activity</label>
    <pluralLabel>Event Activities</pluralLabel>
</CustomObject>