force-app/main/default/objects/EventActivity__e/fields/EventName__c.field-meta.xml
<CustomField>
    <fullName>EventName__c</fullName>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>