force-app/main/default/objects/EventActivity__e/fields/HandlerClassName__c.field-meta.xml
<CustomField>
    <fullName>HandlerClassName__c</fullName>
    <label>Handler Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>