force-app/main/default/objects/EventActivity__e/fields/IsCDC__c.field-meta.xml
<CustomField>
    <fullName>IsCDC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If is true means that it is a event from change data capture</description>
    <label>Is CDC</label>
    <type>Checkbox</type>
</CustomField>