force-app/main/default/objects/EventActivity__e/fields/SourceReplayId__c.field-meta.xml
<CustomField>
    <fullName>SourceReplayId__c</fullName>
    <label>Source ReplayId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>